--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+*{
+padding:0;
+margin: 0;
+
+}
+
+
 header{
 background-color: #424e61;
 color: white;
 display: flex;
 justify-content: space-around;
-
-
+align-items: center;
+padding: 24px 0;
 
 }
 .cabeçalho-imagem{
