--- a/style.css
+++ b/style.css
@@ -18,3 +18,44 @@ font-size: 24px;
 margin: 0 16px;
 
 }
+
+.escola{
+background-image: linear-gradient(#424e61,#4ebfe9);
+color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 24px 0;
+
+
+}
+
+.escola-imagem{
+width: 25%;
+
+
+}
+.escola-div-conteudo{
+width: 35%;
+
+
+}
+.escola-titulo{
+padding: 24px 0;
+
+
+
+}
+.escola-texto-1{
+padding: 24px 0;
+font-size: 24px;
+
+
+}
+.escola-texto-2{
+padding: 24px 0;
+font-size: 24px;
+
+}
+
+
