--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+
+
+body{
+font-family: 'Poppins', sans-serif;
+
+
+
+}
+
 header{
 background-color: #424e61;
 color: white;
@@ -58,4 +67,17 @@ font-size: 24px;
 
 }
 
+.estudante-imagem{
+width: 20%;
 
+
+}
+.estudante-icone{
+width: 24px;
+
+
+}
+.etudante-div{
+text-align: center;
+
+}
